sm-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-api
  labels:
    app: sm-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sm-api
  template:
    metadata:
      name: sm-api
      labels:
        app: sm-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
              weight: 100
      containers:
        - name: sm-api
          image: mchekini/sm-api:1.0
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
            failureThreshold: 12
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
            failureThreshold: 2
            successThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
              httpHeaders:
                - name: header1
                  value: neymar
            failureThreshold: 2
            successThreshold: 1
            periodSeconds: 10
