sm-chart/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod
  labels:
    app: my-first-pod
spec:
  containers:
    - name: my-first-pod
      image: mchekini/sm-api:1.0
      ports:
        - containerPort: 8080
      imagePullPolicy: Always
      livenessProbe:
        httpGet:
          port: 8080
          path: /api/v1/health
          httpHeaders:
            - name: header1
              value: neymar
        successThreshold: 1
        failureThreshold: 3
        initialDelaySeconds: 10
      readinessProbe:
        httpGet:
          port: 8080
          path: /api/v1/health
        successThreshold: 1
        failureThreshold: 3
        initialDelaySeconds: 10
      startupProbe:
        httpGet:
          port: 8080
          path: /api/v1/health
        successThreshold: 1
        failureThreshold: 6
        initialDelaySeconds: 10
