sm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-api
spec:
  selector:
    app: sm-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
